Fixed race conditions from removing multiple students from student group or deleting multiple constraint instances.
