# uftos-openapi-specs.json
@@ -69,6 +69,36 @@
       }
     },
     "/constraints/{signatureId}/instances" : {
+      "delete" : {
+        "operationId" : "deleteConstraintInstance",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "signatureId",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "type" : "array",
+                "items" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        },
+        "tags" : [ "constraint-controller" ]
+      },
       "get" : {
         "operationId" : "getConstraintInstances",
         "parameters" : [ {
@@ -143,30 +173,6 @@
       }
     },
     "/constraints/{signatureId}/instances/{id}" : {
-      "delete" : {
-        "operationId" : "deleteConstraintInstance",
-        "parameters" : [ {
-          "in" : "path",
-          "name" : "signatureId",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "path",
-          "name" : "id",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK"
-          }
-        },
-        "tags" : [ "constraint-controller" ]
-      },
       "get" : {
         "operationId" : "getConstraintInstanceById",
         "parameters" : [ {
@@ -1049,7 +1055,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/PageStudentGroup"
+                  "$ref" : "#/components/schemas/PageStudentGroupResponseDto"
                 }
               }
             },
@@ -1075,7 +1081,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/StudentGroup"
+                  "$ref" : "#/components/schemas/StudentGroupResponseDto"
                 }
               }
             },
@@ -1118,7 +1124,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/StudentGroup"
+                  "$ref" : "#/components/schemas/StudentGroupResponseDto"
                 }
               }
             },
@@ -1152,7 +1158,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/StudentGroup"
+                  "$ref" : "#/components/schemas/StudentGroupResponseDto"
                 }
               }
             },
@@ -1247,7 +1253,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/StudentGroup"
+                  "$ref" : "#/components/schemas/StudentGroupResponseDto"
                 }
               }
             },
@@ -2819,13 +2825,13 @@
           }
         }
       },
-      "PageStudentGroup" : {
+      "PageStudentGroupResponseDto" : {
         "type" : "object",
         "properties" : {
           "content" : {
             "type" : "array",
             "items" : {
-              "$ref" : "#/components/schemas/StudentGroup"
+              "$ref" : "#/components/schemas/StudentGroupResponseDto"
             }
           },
           "empty" : {
@@ -3252,6 +3258,47 @@
             "type" : "array",
             "items" : {
               "type" : "string"
+            }
+          }
+        }
+      },
+      "StudentGroupResponseDto" : {
+        "type" : "object",
+        "properties" : {
+          "grades" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/GradeResponseDto"
+            }
+          },
+          "id" : {
+            "type" : "string"
+          },
+          "lessons" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Lesson"
+            }
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "students" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Student"
+            }
+          },
+          "subjects" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Subject"
+            }
+          },
+          "tags" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Tag"
             }
           }
         }
